--- a/recipe-dashboard/src/index.css
+++ b/recipe-dashboard/src/index.css
@@ -65,13 +65,6 @@ button:focus-visible {
   box-shadow: 5px 5px 10px #8888882f;
 }
 
-.right {
-  display: flex;
-  flex: 80%;
-  justify-content: center;
-  align-items: center;
-}
-
 ul {
   list-style-type: none;
   text-align: left;
@@ -94,4 +87,33 @@ i {
   background-color: #545ced3f;
   width: 200px;
   color: rgba(35, 29, 29, 0.87);
+}
+
+.dashboard {
+  background-color: #545ced3f;
+  padding: 2em;
+  margin: 2em;
+  border-radius: 12px;
+  box-shadow: 5px 5px 10px #8888882f;
+  width: 500px;
+  height: 500px;
+}
+
+th,
+td {
+  padding: 16px;
+}
+
+table {
+  margin: 0 auto;
+  font-weight: 600;
+}
+
+input {
+  margin-top: 1em;
+}
+
+.break {
+  flex-basis: 100%;
+  height: 0;
 }
